fix: nav-menu to 150 percent to eliminate overhang on iOS devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -364,7 +364,7 @@ body.dark-theme {
 @media screen and (max-width: 1150px) {
   .nav__menu {
     position: fixed;
-    top: -100%;
+    top: -150%;
     left: 0;
     background-color: hsla(0, 0%, 0%, 0.75);
     width: 100%;
