--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -69,7 +69,7 @@
 	&__menu {
 		@media screen and (max-width: 1150px) {
 			position: fixed;
-			top: -100%;
+			top: -150%;
 			left: 0;
 			background-color: hsla(0, 0%, 0%, 0.75);
 			width: 100%;
